# c2pa-android

./: .editorconfig  .gitignore  C2PATestScreen_FIXES.md  COSE_SIGNATURE_FIX.md  JNI_IMPROVEMENTS.md  Makefile  README.md  REAL_SIGNING_IMPLEMENTATION.md  SIGNING_HELPER_IMPLEMENTATION.md  TEST_FIXES_SUMMARY.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
.github/workflows/: check-schema-changes.yml  ci.yml  coverage.yml  docs.yml  release.yml  test.yml  update-c2pa-core-sdk.yml
example/: settings.gradle.kts
example-app/app/: build.gradle.kts  proguard-rules.pro
example-app/app/src/main/: AndroidManifest.xml
example-app/app/src/main/res/values/: strings.xml  themes.xml
example-app/app/src/main/res/xml/: file_paths.xml
example/app/: build.gradle.kts
example/app/src/main/: AndroidManifest.xml
example/gradle/wrapper/: gradle-wrapper.properties
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
signing-server/: .gitignore  README.md  build.gradle.kts  run.sh
signing-server/src/main/resources/: application.conf  logback.xml
src/: C2PA.kt  HardwareSecurity.kt  c2pa_jni.c
template/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
template/c2pa/: build.gradle.kts
template/c2pa/src/main/cpp/: CMakeLists.txt
template/gradle/wrapper/: gradle-wrapper.properties
test-app/app/: build.gradle.kts  proguard-rules.pro
test-app/app/src/main/: AndroidManifest.xml
test-app/gradle/wrapper/: gradle-wrapper.properties
test-shared/: build.gradle.kts  proguard-rules.pro
(+111 files in other folders)
